# CapyVAE

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
capyvae/: __init__.py  linear_vae.py  vae_trainer.py  weighted_dataset.py
